# shorten-or-lengthen-url-relatively

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
migrations/: 20240207170624_init.up.sql
src/: main.rs
templates/: base.html  index.html  output.css  redirect.html
