[package]
name = "short-url-relatively"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.36", features=["full"]}
sqlx = {version="0.7", features=["postgres", "runtime-tokio-rustls"]}
sqlx-cli = "0.7.3"
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
nanoid = "0.4.0"
askama = { version = "0.12.1" }
askama_axum = "0.4.0"
tower-http = { version = "0.5.1", features = ["fs"] }
